argo/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: header-based-rollout
spec:
  replicas: 3
  selector:
    matchLabels:
      app: header-based-app
  template:
    metadata:
      labels:
        app: header-based-app
    spec:
      containers:
      - name: header-based-app
        image: nginx:1.28.0  # Replace with your image
        ports:
        - containerPort: 80
  strategy:
    canary:
      canaryService: canary-svc
      stableService: stable-svc
      trafficRouting:
        alb:
          ingress: header-based-ingress
          servicePort: 80
          annotationPrefix: header-based-route
      steps:
      - setWeight: 20
      - pause: {}
      - setWeight: 40
      - pause: {}
      - setWeight: 60
      - pause: {}
      - setWeight: 80
      - pause: {}
